proyecto/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto
-d
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java
<---- end of javadoc command ---->
Loading source file C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java...
Constructing Javadoc information...
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:2: error: package indiceJava.util does not exist
import indiceJava.util.*;
^
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:27: error: cannot find symbol
    private List muroList;
            ^
  symbol:   class List
  location: class Caballero
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:29: error: cannot find symbol
    private LinkedList<GreenfootImage> heroCaballero;//lista de animacion
            ^
  symbol:   class LinkedList
  location: class Caballero
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:13: warning - Tag @see:illegal character: "42" in "indiceJavva.util.*; se usa para poder acceder a las listas para realizar animaciones"
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:13: warning - Tag @see:illegal character: "59" in "indiceJavva.util.*; se usa para poder acceder a las listas para realizar animaciones"
Standard Doclet version 1.8.0_31
Building tree for all the packages and classes...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\Caballero.html...
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:13: warning - @autor is an unknown tag.
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:13: warning - @versión is an unknown tag.
C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\Caballero.java:13: warning - Tag @see: reference not found: indiceJavva.util.*; se usa para poder acceder a las listas para realizar animaciones
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\package-frame.html...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\package-summary.html...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\allclasses-frame.html...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\allclasses-noframe.html...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\index.html...
Generating C:\Users\Omar\Documents\Nueva carpeta (4)\trunk\proyecto\doc\stylesheet.css...
8 warnings
